Fix: Fixing names and improve code